--- a/src/main/resources/static/css/stu_task_style.css
+++ b/src/main/resources/static/css/stu_task_style.css
@@ -67,6 +67,7 @@
 	width: 70%;
 	/*border: 1px solid red;*/
 	font-size: 0.9em;
+	margin-top: 10px;
 	/*margin: 0 auto;*/
 }
 .main_style_over_bottom{
@@ -75,6 +76,14 @@
 	/*border: 1px solid red;*/
 	font-size: 0.9em;
 	margin-top: 25px;
+	/*margin: 0 auto;*/
+}
+.main_style_bottom_over{
+	height: 20px;
+	width: 70%;
+	/*border: 1px solid red;*/
+	font-size: 0.9em;
+	margin-top: 20px;
 	/*margin: 0 auto;*/
 }
 .bottom_time_width{
