--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,22 +10,49 @@ style{
 	margin-top: 10px;
 	}
 .model{
-	background: #f5f5f5;
+	/*background: #f5f5f5;*/
 	height:auto;
 	position:relative;
 	z-index:1
 }
+.program_hover:hover{
+	background: #eeeeee;
+	height: 50px;
+	width: 14%;
+	line-height: 50px;
+}
 .program{
 	font-size: 1.2em;
-	font-weight: 20;
+	/*font-weight: 20;*/
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
 /*	font-style: oblique;s*/
+	/*height: 50px;*/
 	margin-left: 230px;
 	padding-top: 30px;
 }
+.hover_word{
+	height: 50px;
+	line-height: 50px;
+}
 .program span{
+	height: 50px;
+	line-height: 50px;
 	font-weight: 500;
 	font-size: 1.2em;
+}
+.fold{
+	/*width: 80%;*/
+	/*border: 1px solid red;*/
+	margin-left: 20px;
+	height: 30px;
+	vertical-align: middle;
+	background: url("../images/down.png") no-repeat;
+	-webkit-background-size: cover;
+	background-size: cover;
+	width: 30px;
+
+
+
 }
 .pic{
 	margin-top: 10px;
@@ -68,6 +95,15 @@ style{
 	width: 40%;
 	margin-left: 55%;
 	font-size: 0.8em;
+}
+.txt_modify{
+	background: url("../images/link.png") no-repeat;
+	-webkit-background-size: cover;
+	background-size: cover;
+	width: 30px;
+	height: 30px;
+	margin-left: 45%;
+	margin-top:48px;
 }
 .program_pic h4{
 	margin-left: 10px;
